--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php": ">=8.1",
         "webmozart/assert": "^1.11",
         "doctrine/collections": "^2.1",
-        "atournayre/assert": "^0"
+        "atournayre/assert": "^0",
+        "aimeos/map": "^3.4"
     },
     "conflict": {
         "phpstan/phpstan": "<0.12.20",
